--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,12 @@
-html,
+/* html,
 body {
 
-}
+} */
 
 #game {
     display: grid;
     place-items: center;
     width: 100%;
     height: 600px;
-    
+
 }
