--- a/src/style.css
+++ b/src/style.css
@@ -48,3 +48,20 @@ body {
 .box.right {
     background: var(--right);
   }
+
+.animated {
+    animation: flip 0.5s ease;
+}
+
+/* ANIMATION OF SHRIEKING OR BOX */
+@keyframes flip {
+0% {
+    transform: scaleY(1);
+}
+50% {
+    transform: scaleY(0);
+}
+100% {
+    transform: scaleY(1);
+}
+}
