--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,18 @@ body {
     --wrong:#b59f3b;
     --right:#538d4e;
 }
+
+.title {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    text-align: center;
+    margin-top: 5rem;
+}
 #game {
     display: flex;
     justify-content: center;
     align-items: start;
-    margin-top: 5rem;
+    margin-top: 2rem;
     width: 100%;
     height: 72vh;
 }
